5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1636_2450.log
== TEST (2019-04-10 14:07:33) 
-- CODE:
if input(marcos .upper()= "S"):
-- ERROR:
File "XXXX", line 2
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:07:42) 
-- CODE:
if input((marcos .upper()= "S"):
-- ERROR:
File "XXXX", line 1
    if input((marcos .upper()= "S"):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:07:47) 
-- CODE:
if (marcos .upper()= "S"):
-- ERROR:
File "XXXX", line 1
    if (marcos .upper()= "S"):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:08:20) 
-- CODE:
if (marcos .upper()== "S"):
-- ERROR:
File "XXXX", line 2
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:10:19) 
-- CODE:
if (marcos == otavio .upper() "S"):
-- ERROR:
File "XXXX", line 1
    if (marcos == otavio .upper() "S"):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:10:32) 
-- CODE:
if input(marcos == otavio .upper() "S"):
-- ERROR:
File "XXXX", line 1
    if input(marcos == otavio .upper() "S"):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:10:35) 
-- CODE:
if input (marcos == otavio .upper() "S"):
-- ERROR:
File "XXXX", line 1
    if input (marcos == otavio .upper() "S"):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:11:38) 
-- CODE:
if (input(marcos == "S": .upper())
-- ERROR:
File "XXXX", line 1
    if (input(marcos == "S": .upper())
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:11:50) 
-- CODE:
if (input(marcos == "S":) .upper()
-- ERROR:
File "XXXX", line 1
    if (input(marcos == "S":) .upper()
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:28:20) 
-- CODE:
nome A = amanda
nome B = beatriz
print( if( amanda == beatriz"S": .upper())
-- ERROR:
File "XXXX", line 1
    nome A = amanda
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:28:28) 
-- CODE:
nome A = amanda
nome B = beatriz
print( if ( amanda == beatriz"S": .upper())
-- ERROR:
File "XXXX", line 1
    nome A = amanda
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
